--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,4 +1,4 @@
-/********** Base styles **********/
+/* Base styles */
 * {
   box-sizing: border-box;
 }
@@ -6,23 +6,30 @@ h1 {
   margin-bottom: 15px;
   text-align: center;
 }
+.crazy {
+  border: 5px solid;
+  background: gray;
+  margin: 10px 10px 10px 10px;
+}
 h2 {
-  border: 1px solid black;
+  border-right: 5px solid;
+  border-bottom: 5px solid;
+  border-left: 5px solid;
+  background: pink;
   width: 150px;
   text-align: center;
+  float: right;
+  position: relative;
+  top: -20px;
+  right: 5px;
 }
-
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
+  border: 1px dashed;
   height: 150px;
-  margin-right: 20px;
-  margin-left: 20px;
-  font-family: Helvetica;
-  color: white;
+  margin: 35px 5px 5px 5px;
 }
 
-/* Simple Responsive Framework. */
+/* Simple responsive framework */
 .row {
   width: 100%;
 }
@@ -30,7 +37,6 @@ p {
 /* Large devices */
 @media (min-width: 992px) {
   .col-lg-4 {
-    border: 1px solid black;
     float: left;
   }
   .col-lg-4 {
@@ -41,7 +47,6 @@ p {
 /* Medium devices */
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6, .col-md-12 {
-    border: 1px solid black;
     float: left;
   }
   .col-md-6 {
@@ -54,11 +59,10 @@ p {
 
 /* Small devices */
 @media (max-width: 767px) {
-  .col-sd-12 {
-    border: 1px solid black;
+  .col-sm-12 {
     float: left;
   }
-  .col-sd-12 {
+  .col-sm-12 {
     width: 100%;
   }
 }
