--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,53 +1,67 @@
-/* Base styles */
+/* Base Styles */
+
 * {
   box-sizing: border-box;
 }
+
+body {
+  background: #D3D3D3;
+  font-family: Helvetica;
+}
+
 h1 {
-  margin-bottom: 15px;
   text-align: center;
 }
-.crazy {
-  border: 5px solid;
-  background: gray;
-  margin: 10px 10px 10px 10px;
+
+.container {
+  padding: 10px;
 }
+
+section {
+  border: 5px solid black;
+  background-color: gray;
+  height: auto;
+}
+
 h2 {
-  border-right: 5px solid;
   border-bottom: 5px solid;
   border-left: 5px solid;
-  background: pink;
-  width: 150px;
   text-align: center;
+  width: 50%;
   float: right;
-  position: relative;
-  top: -20px;
-  right: 5px;
+  margin: 0;
+  background-color: pink;
 }
+
 p {
-  border: 1px dashed;
-  height: 150px;
-  margin: 35px 5px 5px 5px;
+  padding: 10px;
+  margin: 0;
 }
 
 /* Simple responsive framework */
+
 .row {
   width: 100%;
 }
 
 /* Large devices */
+
 @media (min-width: 992px) {
   .col-lg-4 {
     float: left;
   }
+
   .col-lg-4 {
     width: 33.33%;
   }
 }
 
 /* Medium devices */
+
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6, .col-md-12 {
     float: left;
+
   }
   .col-md-6 {
     width: 50%;
@@ -58,10 +72,12 @@ p {
 }
 
 /* Small devices */
+
 @media (max-width: 767px) {
   .col-sm-12 {
     float: left;
   }
+
   .col-sm-12 {
     width: 100%;
   }
